<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/spacing_md"
    tools:context=".RegisterCountryFragment"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_lg"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryCapital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_capital_label"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_currency_label"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryCapital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_language_label"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCountryLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_location_label"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCountryLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerUpdateCountryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_country_button_label"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCountryLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_countries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_countries_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>